# drophub

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml
.github/workflows/: ci.yml
drophub/: Cargo.toml  LICENSE-MIT  README.md
drophub-back/: Cargo.toml  README.md
drophub-back/src/: cli.rs  config.rs  jwt.rs  main.rs  server.rs  test_utils.rs  utils.rs
drophub-back/src/server/: mod.rs  rpc.rs  tests.rs
drophub-back/src/server/room/: mod.rs  rpc.rs  tests.rs  types.rs  validator.rs
drophub-back/src/server/storage/: invites.rs  mod.rs  models.rs  peers.rs
drophub-back/tests/: config.yaml
drophub-front/: .env  Cargo.toml  README.md  index.html  index.scss  package-lock.json  package.json
drophub-front/src/: app.rs  config.rs  ctx.rs  error.rs  main.rs  store.rs  unwrap_alert_ext.rs  unwrap_notify_ext.rs  validate.rs
drophub-front/src/components/: alert.rs  clients.rs  connect_room_form.rs  copy_input.rs  create_room_form.rs  file_card.rs  footer.rs  full_screen_loading.rs  full_screen_notify.rs  header.rs  icons.rs  mod.rs  notify.rs  placeholder.rs  qr_code.rs  room_control.rs  room_files.rs
drophub-front/src/components/room_control/: client_list.rs  client_modal.rs  invite_list.rs  invite_modal.rs  mod.rs  room_info.rs  room_info_modal.rs
drophub-front/src/components/room_control2/: client_list.rs  header.rs  invite_list.rs  invite_modal.rs  mod.rs  room_info.rs  room_info_modal.rs
drophub-front/src/components/room_entities/: entity_announce.rs  entity_card.rs  mod.rs
drophub-front/src/components/room_files/: file_card.rs  file_upload.rs  mod.rs
drophub-front/src/components/room_media_share/: media_card.rs  media_upload.rs  mod.rs
drophub-front/src/hooks/: alert.rs  display_mode.rs  mod.rs  notify.rs  room.rs  rpc.rs  validate.rs
drophub-front/src/routes/: connect_room.rs  connect_room_load.rs  create_room.rs  create_room_load.rs  home.rs  mod.rs  not_found.rs  room.rs
drophub-front/src/routes/room/: mod.rs  network.rs  query.rs  state.rs
drophub-front/src/rpc/: channel.rs  mod.rs
drophub-front/static/: app.scss  colors.scss  index.html  index.scss  notify.scss  theme-colors.scss  utils.scss
drophub/src/: error.rs  jwt.rs  lib.rs  rpc.rs  types.rs
drophub/src/room/: error.rs  mod.rs  rpc.rs  types.rs
