[package]
name = "drophub-back"
version = "0.1.0"
edition = "2021"
description = "Service for secure data transfer between devices via internet"
readme = "README.md"
repository = "https://github.com/LazyMechanic/drophub"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drophub = { path = "../drophub", version = "0.1.0", features = ["rpc-server"] }

anyhow = "1.0.70"
async-trait = "0.1.71"
base64 = "0.21.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
config = { version = "0.13.3", features = ["yaml"] }
dashmap = "5.4.0"
dotenv = "0.15.0"
futures = "0.3.28"
humantime-serde = "1.1.1"
indexmap = "2.0.0"
jsonrpsee = "0.18.1"
jsonwebtoken = "8.3.0"
mongodb = "2.6.0"
parking_lot = "0.12.1"
passwords = "3.1.13"
rand = "0.8.5"
rdkafka = "0.33.2"
replace_with = "0.1.7"
scopeguard = "1.1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ttl_cache = "0.5.1"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
drophub = { path = "../drophub", version = "0.1.0", features = ["rpc-server", "rpc-client-ws"] }

assert_matches = "1.5.0"
lazy_static = "1.4.0"
serde_yaml = "0.9.21"