[package]
name = "drophub-front"
version = "0.1.0"
edition = "2021"
description = "Service for secure data transfer between devices via internet"
readme = "README.md"
repository = "https://github.com/LazyMechanic/drophub"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "data", "transfer"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
drophub = { path = "../drophub", version = "0.1.0", features = ["rpc-client-wasm"] }

anyhow = "1.0.70"
console_error_panic_hook = "0.1.7"
dotenvy_macro = "0.15.7"
futures = "0.3.28"
gloo = "0.8.0"
jsonrpsee = { version = "0.18.1" }
serde = { version = "1.0.160", features = ["derive"] }
tracing = { version = "0.1.38", default-features = false }
tracing-wasm = "0.2.1"
url = { version = "2.3.1", features = ["serde"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"