[package]
name = "drophub-front"
version = "0.1.0"
edition = "2021"
description = "Service for secure data transfer between devices via internet"
readme = "README.md"
repository = "https://github.com/LazyMechanic/drophub"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "data", "transfer"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
drophub = { path = "../drophub", version = "0.1.0", features = ["rpc-client-wasm"] }

anyhow = "1.0.71"
console_error_panic_hook = "0.1.7"
dotenvy_macro = "0.15.7"
futures = "0.3.28"
gloo = "0.8.0"
humantime = "2.1.0"
indexmap = "2.0.0"
jsonrpsee = { version = "0.18.1" }
lazy_static = "1.4.0"
qrcode = { version = "0.12.0", default-features = false, features = ["svg"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing = { version = "0.1.38", default-features = false }
tracing-wasm = "0.2.1"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4", "js"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlSelectElement", "HtmlButtonElement", "HtmlFormElement", "DomTokenList", "DomRect", "NamedNodeMap", "Attr", "MediaQueryList"] }
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
yewdux = "0.9.2"