[package]
name = "drophub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
jsonrpsee = { version = "0.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
tracing = "0.1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }