[package]
name = "drophub"
version = "0.1.0"
edition = "2021"
description = "Service for secure data transfer between devices via internet"
readme = "README.md"
repository = "https://github.com/LazyMechanic/drophub"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
jsonrpsee = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
tracing = "0.1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
jsonrpsee = { version = "0.18", features = ["full"] }

[features]
default = ["jsonrpsee/macros"]

rpc-server = ["jsonrpsee/server", "jsonrpsee/macros"]
rpc-client-ws = ["jsonrpsee/ws-client", "jsonrpsee/macros"]
rpc-client-wasm = ["jsonrpsee/wasm-client", "jsonrpsee/macros", "uuid/js"]
